# temperature

./: Cargo.toml  Dockerfile  LICENSE  README.md  index.html  temp-gauge.c
src/: main.rs
