[package]
name = "temperature"
version = "0.1.0"
authors = ["Zach Schuermann <zachary.zvs@gmail.com>"]
edition = "2018"

[dependencies]
eventsource = "0.5.0"
reqwest = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
